k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: element
  labels:
    name: element
    app: element-web
